# vigilant-happiness

./: .gitignore  Makefile.am  circular_disc_uniform_pressure_foeppl_von_karman_rolling_clamp.cc  circular_disc_uniform_pressure_koiter_steigmann_fully_clamped_out_pinned_in.cc  circular_disc_uniform_pressure_koiter_steigmann_rolling_clamp.cc  circular_disc_uniform_pressure_large_displacement_plate_rolling_clamp.cc  fish_domain_large_displacement_plate.cc  slow_fourier_transform.h
